export default {
  artisanDetail: {
    hello: "Hello"
  },
  Settings: {
    settingsTitle: "Settings",
    choseLanguage: "Chose a language",
    returnToLogin: "Return to Login"
  },
  ActionCenter: {
    title: "Action Center",
...
    numberSold: "Number items sold",
    income: "Overall product income",
    viewAll: "View All",
    stats: "Stats"
  },
  ArtisanDetail: {
    title: "Artisan Details",
    artisanInfo: "Artisan Info",
    edit: "Edit",
    message: "Message",
    topProds: "Top Products",
    add: "Add",
    viewAll: "View All"
...
